--- a/Mango.WebApp/Views/Shared/_Layout.cshtml
+++ b/Mango.WebApp/Views/Shared/_Layout.cshtml
@@ -37,6 +37,22 @@
                           </ul>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Auth" asp-action="Login">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Auth" asp-action="Register">Register</a>
+                            </li>
+                        }
+                        else{
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Auth" asp-action="Logout">Register</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
